src/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

"use strict";

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Program: peg$parseProgram,
  };
  let peg$startRuleFunction = peg$parseProgram;

  const peg$c0 = "{";
  const peg$c1 = "}";
  const peg$c2 = "if";
  const peg$c3 = "(";
  const peg$c4 = ")";
  const peg$c5 = "else";
  const peg$c6 = "while";
  const peg$c7 = "do";
  const peg$c8 = ";";
  const peg$c9 = "for";
  const peg$c10 = "switch";
  const peg$c11 = "case";
  const peg$c12 = ":";
  const peg$c13 = "default";
  const peg$c14 = ",";
  const peg$c15 = "=";
  const peg$c16 = "u32";
  const peg$c17 = "u16";
  const peg$c18 = "u8";
  const peg$c19 = "i32";
  const peg$c20 = "i16";
  const peg$c21 = "i8";
  const peg$c22 = "break";
  const peg$c23 = "return";
  const peg$c24 = "+=";
  const peg$c25 = "-=";
  const peg$c26 = "*=";
  const peg$c27 = "/=";
  const peg$c28 = "%=";
  const peg$c29 = "<<=";
  const peg$c30 = ">>=";
  const peg$c31 = "&=";
  const peg$c32 = "^=";
  const peg$c33 = "|=";
  const peg$c34 = "?";
  const peg$c35 = "||";
  const peg$c36 = "&&";
  const peg$c37 = "|";
  const peg$c38 = "^";
  const peg$c39 = "&";
  const peg$c40 = "==";
  const peg$c41 = "!=";
  const peg$c42 = "<=";
  const peg$c43 = ">=";
  const peg$c44 = "<<";
  const peg$c45 = ">>";
  const peg$c46 = "++";
  const peg$c47 = "--";
  const peg$c48 = "0x";
  const peg$c49 = "0b";
  const peg$c50 = "0";
  const peg$c51 = "\"";
  const peg$c52 = "\\";
  const peg$c53 = "x\"";
  const peg$c54 = "continue";
  const peg$c55 = "/*";
  const peg$c56 = "*/";
  const peg$c57 = "//";

  const peg$r0 = /^[a-zA-Z0-9_]/;
  const peg$r1 = /^[<>]/;
  const peg$r2 = /^[+\-]/;
  const peg$r3 = /^[%*\/]/;
  const peg$r4 = /^[!+\-~]/;
  const peg$r5 = /^[0-9a-fA-F]/;
  const peg$r6 = /^[01]/;
  const peg$r7 = /^[0-9]/;
  const peg$r8 = /^["\\]/;
  const peg$r9 = /^[^"\\\n]/;
  const peg$r10 = /^[0-9a-f]/;
  const peg$r11 = /^[a-zA-Z_]/;
  const peg$r12 = /^[ \t\n\r]/;
  const peg$r13 = /^[\n\r]/;

  const peg$e0 = peg$literalExpectation("{", false);
  const peg$e1 = peg$literalExpectation("}", false);
  const peg$e2 = peg$literalExpectation("if", false);
  const peg$e3 = peg$literalExpectation("(", false);
  const peg$e4 = peg$literalExpectation(")", false);
  const peg$e5 = peg$literalExpectation("else", false);
  const peg$e6 = peg$literalExpectation("while", false);
  const peg$e7 = peg$literalExpectation("do", false);
  const peg$e8 = peg$literalExpectation(";", false);
  const peg$e9 = peg$literalExpectation("for", false);
  const peg$e10 = peg$literalExpectation("switch", false);
  const peg$e11 = peg$literalExpectation("case", false);
  const peg$e12 = peg$literalExpectation(":", false);
  const peg$e13 = peg$literalExpectation("default", false);
  const peg$e14 = peg$literalExpectation(",", false);
  const peg$e15 = peg$literalExpectation("=", false);
  const peg$e16 = peg$otherExpectation("type name");
  const peg$e17 = peg$literalExpectation("u32", false);
  const peg$e18 = peg$literalExpectation("u16", false);
  const peg$e19 = peg$literalExpectation("u8", false);
  const peg$e20 = peg$literalExpectation("i32", false);
  const peg$e21 = peg$literalExpectation("i16", false);
  const peg$e22 = peg$literalExpectation("i8", false);
  const peg$e23 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e24 = peg$literalExpectation("break", false);
  const peg$e25 = peg$literalExpectation("return", false);
  const peg$e26 = peg$literalExpectation("+=", false);
  const peg$e27 = peg$literalExpectation("-=", false);
  const peg$e28 = peg$literalExpectation("*=", false);
  const peg$e29 = peg$literalExpectation("/=", false);
  const peg$e30 = peg$literalExpectation("%=", false);
  const peg$e31 = peg$literalExpectation("<<=", false);
  const peg$e32 = peg$literalExpectation(">>=", false);
  const peg$e33 = peg$literalExpectation("&=", false);
  const peg$e34 = peg$literalExpectation("^=", false);
  const peg$e35 = peg$literalExpectation("|=", false);
  const peg$e36 = peg$literalExpectation("?", false);
  const peg$e37 = peg$literalExpectation("||", false);
  const peg$e38 = peg$literalExpectation("&&", false);
  const peg$e39 = peg$literalExpectation("|", false);
  const peg$e40 = peg$literalExpectation("^", false);
  const peg$e41 = peg$literalExpectation("&", false);
  const peg$e42 = peg$literalExpectation("==", false);
  const peg$e43 = peg$literalExpectation("!=", false);
  const peg$e44 = peg$literalExpectation("<=", false);
  const peg$e45 = peg$literalExpectation(">=", false);
  const peg$e46 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e47 = peg$literalExpectation("<<", false);
  const peg$e48 = peg$literalExpectation(">>", false);
  const peg$e49 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e50 = peg$classExpectation(["%", "*", "/"], false, false, false);
  const peg$e51 = peg$literalExpectation("++", false);
  const peg$e52 = peg$literalExpectation("--", false);
  const peg$e53 = peg$classExpectation(["!", "+", "-", "~"], false, false, false);
  const peg$e54 = peg$literalExpectation("0x", true);
  const peg$e55 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false, false);
  const peg$e56 = peg$literalExpectation("0b", true);
  const peg$e57 = peg$classExpectation(["0", "1"], false, false, false);
  const peg$e58 = peg$literalExpectation("0", false);
  const peg$e59 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e60 = peg$literalExpectation("\"", false);
  const peg$e61 = peg$literalExpectation("\\", false);
  const peg$e62 = peg$classExpectation(["\"", "\\"], false, false, false);
  const peg$e63 = peg$classExpectation(["\"", "\\", "\n"], true, false, false);
  const peg$e64 = peg$literalExpectation("x\"", false);
  const peg$e65 = peg$classExpectation([["0", "9"], ["a", "f"]], false, false, false);
  const peg$e66 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e67 = peg$literalExpectation("continue", false);
  const peg$e68 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e69 = peg$literalExpectation("/*", false);
  const peg$e70 = peg$literalExpectation("*/", false);
  const peg$e71 = peg$anyExpectation();
  const peg$e72 = peg$literalExpectation("//", false);
  const peg$e73 = peg$classExpectation(["\n", "\r"], false, false, false);

  function peg$f0(body) {    
         return { type: "Program", body }; 
  }
  function peg$f1(s) {    return s;  }
  function peg$f2(body) {
    return { type: "BlockStatement", body };
  }
  function peg$f3(test, consequent, alt) {    return alt;  }
  function peg$f4(test, consequent, alternate) {
    return { type: "IfStatement", test, consequent, alternate };
  }
  function peg$f5(test, body) {
    return { type: "WhileStatement", test, body };
  }
  function peg$f6(body, test) {
    return { type: "DoWhileStatement", test, body };
  }
  function peg$f7() {    return null;  }
  function peg$f8(init, test, update, body) {
    // Clean up the init statement to unpack if it's an ExpressionStatement
    const initNode = init?.type === "ExpressionStatement" ? init.expression : init;
    return { type: "ForStatement", init: initNode, test, update, body };
  }
  function peg$f9(discriminant, cases) {    
         return { type: "SwitchStatement", discriminant, cases }; 
  }
  function peg$f10(test, consequent) {
    return { type: "SwitchCase", test, consequent };
  }
  function peg$f11(consequent) {
    return { type: "SwitchCase", test: null, consequent };
  }
  function peg$f12(varType, head, d) {    return d;  }
  function peg$f13(varType, head, tail) {
    return {
      type: "VariableDeclaration",
      declarations: [head, ...tail].map(d => ({ type: "VariableDeclarator", varType, id: d.id, init: d.init }))
    };
  }
  function peg$f14(id, expr) {    return expr;  }
  function peg$f15(id, init) {
    return { id, init: init !== null ? init : null };
  }
  function peg$f16(name) {
    return name;
  }
  function peg$f17() {
    return { type: "BreakStatement" };
  }
  function peg$f18(argument) {    
         return { type: "ReturnStatement", argument }; 
  }
  function peg$f19(expression) {    
         return { type: "ExpressionStatement", expression }; 
  }
  function peg$f20(left, operator, right) {    
         return { type: "AssignmentExpression", operator, left, right }; 
  }
  function peg$f21(test, c, a) {    return { c, a };  }
  function peg$f22(test, rest) {
    return rest === null ? test
      : { type: "ConditionalExpression", test, consequent: rest.c, alternate: rest.a };
  }
  function peg$f23(head, op, right) {    return { logical: true, op, right };  }
  function peg$f24(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f25(head, op, right) {    return { logical: true, op, right };  }
  function peg$f26(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f27(head, op, right) {    return { op, right };  }
  function peg$f28(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f29(head, op, right) {    return { op, right };  }
  function peg$f30(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f31(head, op, right) {    return { op, right };  }
  function peg$f32(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f33(head, op, right) {    return { op, right };  }
  function peg$f34(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f35(head, op, right) {    return { op, right };  }
  function peg$f36(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f37(head, op, right) {    return { op, right };  }
  function peg$f38(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f39(head, op, right) {    return { op, right };  }
  function peg$f40(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f41(head, op, right) {    return { op, right };  }
  function peg$f42(head, tail) {
    return buildBinary(head, tail);
  }
  function peg$f43(operator, argument) {
    const type = (operator === "++" || operator === "--") ? "UpdateExpression" : "UnaryExpression";
    return { type, operator, argument, prefix: true };
  }
  function peg$f44(argument, o) {    return o;  }
  function peg$f45(argument, operator) {
    return operator === null ? argument
      : { type: "UpdateExpression", operator, argument, prefix: false };
  }
  function peg$f46(expr) {    return expr;  }
  function peg$f47(varType, argument) {
    return { type: "CastExpression", varType, argument };
  }
  function peg$f48(callee, args) {    
         return { type: "CallExpression", callee, arguments: args !== null ? args : [] }; 
  }
  function peg$f49(head, expr) {    return expr;  }
  function peg$f50(head, tail) {
    return [head, ...tail];
  }
  function peg$f51(digits) {    
         return { type: "Literal", value: parseInt(digits, 16), raw: text() }; 
  }
  function peg$f52(digits) {
    return { type: "Literal", value: parseInt(digits, 2), raw: text() };
  }
  function peg$f53(digits) {
    error(`leading zeros are not allowed ('0${digits}' is octal in C, and this DSL has no octal literals)`);
  }
  function peg$f54(digits) {    
         return { type: "Literal", value: parseInt(digits, 10), raw: text() }; 
  }
  function peg$f55(chars) {
    return { type: "StringLiteral", value: chars.join(""), raw: text() };
  }
  function peg$f56(c) {    return c;  }
  function peg$f57(digits) {
    const value = [];
    for(let i = 0; i < digits.length; i += 2) value.push(parseInt(digits.slice(i, i + 2), 16));
    return { type: "BytesLiteral", value, raw: text() };
  }
  function peg$f58(name) {    
         return { type: "Identifier", name }; 
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseStatement();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseStatement();
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseStatement() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseBlock();
    if (s2 === peg$FAILED) {
      s2 = peg$parseIfStatement();
      if (s2 === peg$FAILED) {
        s2 = peg$parseDoWhileStatement();
        if (s2 === peg$FAILED) {
          s2 = peg$parseWhileStatement();
          if (s2 === peg$FAILED) {
            s2 = peg$parseForStatement();
            if (s2 === peg$FAILED) {
              s2 = peg$parseSwitchStatement();
              if (s2 === peg$FAILED) {
                s2 = peg$parseDeclarationStatement();
                if (s2 === peg$FAILED) {
                  s2 = peg$parseBreakStatement();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseReturnStatement();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parseExpressionStatement();
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseControlBody() {
    let s0;

    s0 = peg$parseBlock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseStatement();
    }

    return s0;
  }

  function peg$parseBlock() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$parseStatement();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parseStatement();
      }
      s4 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 125) {
        s5 = peg$c1;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s5 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseIfStatement() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;
